--- a/style.css
+++ b/style.css
@@ -40,3 +40,8 @@ main h2 {
 .codys-styles {
     background:rgb(92, 149, 235);
 }
+.OC-style {
+    color: darkgreen;
+    background-color: white;
+    padding: 3px;
+}
